modify some bugs (#80)
* update readme

* update deployment versions

* fix bugs
